--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,6 +1,7 @@
 ---
-import '../styles/global.css';
+import "../styles/global.css";
 ---
+
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <meta charset="UTF-8" />
@@ -33,14 +34,19 @@ import '../styles/global.css';
 <link
   rel="mask-icon"
   href="/images/favicons/safari-pinned-tab.svg"
-  color="#0000ff"
+  color="#ffffff"
 />
-<meta name="msapplication-TileColor" content="#0000ff" />
-<meta name="theme-color" content="#0000ff" />
-<!-- Google fonts Inter- https://fonts.google.com/specimen/Inter -->
-<link  type="text/partytown" rel="preconnect" href="https://fonts.googleapis.com" />
-<link  type="text/partytown" rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link  type="text/partytown"
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+<meta name="msapplication-TileColor" content="#ffffff" />
+<meta name="theme-color" content="#ffffff" />
+<link
+  href="https://fonts.cdnfonts.com/css/neue-haas-grotesk-text-pro"
   rel="stylesheet"
 />
+
+<!-- Ionicons -->
+<script
+  type="module"
+  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+></script>
+<!---- Alpine  -->
+<script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
