--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,67 +1,49 @@
----
-import { Image } from "@astrojs/image/components";
-
-
----
-
-<main aria-labelledby="header" class="relative overflow-hidden">
-  <h2 class="sr-only" id="header">Header</h2><div
-    class="relative mx-auto px-8 max-w-7xl my-24 lg:my-36 lg:px-36 md:px-12"
-  >
-    <div>
-      <div class="mx-auto text-center">
-        <h1
-          class="text-black mt-4 font-bold lg:text-9xl sm:text-5xl text-5xl tracking-tighter"
-        >
-          supreme.
-        </h1><div class="mx-auto lg:mt-8 max-w-xl">
-          <p class="text-zinc-600">
-            Welcome to supreme's starter with Astro & Tailwind
-          </p>
-        </div>
+<section class="bg-white">
+  <div
+    class="items-center w-full px-8 pt-36 mx-auto md:px-12 lg:px-16 max-w-7xl">
+    <div class="max-w-4xl p-10 mx-auto text-center">
+      <div>
+        <p class="text-5xl font-extrabold text-black">
+          An Astro and Tailwind CSS starter template for your newest SaaS
+        </p>
+        <p
+          class="max-w-xl mx-auto mt-4 text-lg tracking-tight text-neutral-500">
+          If you could kick the person in the pants responsible for most of your
+          trouble, you wouldn't sit for a month
+        </p>
       </div>
-      <ol
-        role="list"
-        class="relative grid grid-cols-1 mt-12 gap-3 sm:grid-cols-2 lg:grid-cols-2"
-      >
-        <li class="p-4 lg:p-10 border rounded-2xl">
-          <div class="">
-            <h3 class="text-xl text-accent-400">About</h3>
-          </div>
-          <p class="mt-2 text-zinc-500">
-            This repo is the scaffolding we use at Unwrapped to create new
-            Tailwind based HTML templates.
-          </p>
-        </li>
-        <li class="p-4 lg:p-10 border rounded-2xl">
-          <div class="">
-            <h3 class="text-xl text-accent-400">Structure</h3>
-          </div>
-          <p class="mt-2 text-zinc-500">
-            This scaffolding uses Tailwind CSS Astro to create workflows to make
-            esier the development.
-          </p>
-        </li>
-        <li class="p-4 lg:p-10 border rounded-2xl">
-          <div class="">
-            <h3 class="text-xl text-accent-400">Tailwind CSS</h3>
-          </div>
-          <p class="mt-2 text-zinc-500">
-            A utility-first CSS framework packed with classes like flex, pt-4,
-            text-center and rotate-90 that can be composed to build any design,
-            directly in your markup.
-          </p>
-        </li>
-        <li class="p-4 lg:p-10 border rounded-2xl">
-          <div class="">
-            <h3 class="text-xl text-accent-400">Astro</h3>
-          </div>
-          <p class="mt-2 text-zinc-500">
-            Astro is a new kind of static site builder for the modern web.
-            Powerful developer experience meets lightweight output.
-          </p>
-        </li>
-      </ol>
+      <div class="flex flex-col justify-center gap-3 mt-10 sm:flex-row">
+        <a
+          class="inline-flex items-center justify-center w-full px-6 py-3 text-center text-white duration-200 bg-black border-2 border-black hover:bg-transparent hover:border-black rounded-xl hover:text-black focus:outline-none lg:w-auto focus-visible:outline-black focus-visible:ring-black"
+          href="#">Learn more</a
+        >
+      </div>
     </div>
   </div>
-</main>
+  <div
+    class="items-center w-full px-8 pt-24 mx-auto md:px-12 lg:px-16 max-w-7xl">
+    <img class="w-full rounded-3xl" src="/dashboard.png" alt="" />
+    <div class="pt-12 mx-auto lg:py-16">
+      <div class="mt-6 grid grid-cols-2 gap-0.5 md:grid-cols-6 lg:mt-8">
+        <div class="flex justify-center col-span-1 px-8">
+          <img class="max-h-12" src="/Figma.svg" alt=" logo" />
+        </div>
+        <div class="flex justify-center col-span-1 px-8">
+          <img class="max-h-12" src="/Canva.svg" alt="logo" />
+        </div>
+        <div class="flex justify-center col-span-1 px-8">
+          <img class="max-h-12" src="/Stripe.svg" alt="logo" />
+        </div>
+        <div class="flex justify-center col-span-1 px-8">
+          <img class="max-h-12" src="/Gitlab.svg" alt="logo" />
+        </div>
+        <div class="flex justify-center col-span-1 px-8">
+          <img class="max-h-12" src="/Linear.svg" alt="logo" />
+        </div>
+        <div class="flex justify-center col-span-1 px-8">
+          <img class="max-h-12" src="/Gumroad.svg" alt="logo" />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
