--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -1,10 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Navigation from "../components/global/Navigation.astro";
-import Hero from "../components/landing/Hero.astro";
-import SectionOne from "../components/landing/SectionOne.astro";
-import SectionTwo from "../components/landing/SectionTwo.astro";
-
+import Pricing from "../components/global/Pricing.astro";
 import Testimonial from "../components/global/Testimonial.astro";
 import Faq from "../components/global/Faq.astro";
 import Cta from "../components/global/Cta.astro";
@@ -50,11 +47,8 @@ Use AstroSeo in all the pages you want different Seo than the index page
 />
 <BaseLayout>
   <Navigation />
-  <Hero />
-  <SectionOne />
+  <Pricing />
   <Testimonial />
-  <SectionTwo />
-
   <Faq />
   <Cta />
 </BaseLayout>
