added: login - signup - better footer - new fonts

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -38,15 +38,17 @@ import "../styles/global.css";
 />
 <meta name="msapplication-TileColor" content="#ffffff" />
 <meta name="theme-color" content="#ffffff" />
-<link
-  href="https://fonts.cdnfonts.com/css/neue-haas-grotesk-text-pro"
-  rel="stylesheet"
-/>
 
-<!-- Ionicons -->
+<!--Ionicons -->
 <script
   type="module"
   src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
 ></script>
+
+<!-- Neue Power font -->
+<link href="https://fonts.cdnfonts.com/css/neue-power" rel="stylesheet" />
+<!-- Manrope font -->
+<link href="https://fonts.cdnfonts.com/css/manrope" rel="stylesheet" />
+
 <!---- Alpine  -->
 <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
