--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -1,27 +1,24 @@
-<section class="bg-neutral-100">
+<section class="bg-gray-100">
   <div
-    class="items-center w-full px-8 py-20 mx-auto md:px-12 lg:px-16 max-w-7xl">
+    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-20">
     <div class="mx-auto md:text-center">
       <div class="flex justify-center col-span-1 px-8">
-        <img class="max-h-12" src="/Stripe.svg" alt="logo" />
-      </div>
-      <h2 class="text-4xl mt-8 lg:text-7xl font-extrabold text-neutral-900">
+        <img alt="logo" class="max-h-12" src="/Stripe.svg" />
+      </div><h2
+        class="font-extrabold mt-8 text-black lg:text-7xl text-4xl font-display">
         Astrosaas is loved all around SaaS and it wont leave you dissapointed
       </h2>
-    </div>
-
-    <div class="max-w-2xl mx-auto pt-12">
+    </div><div class="mx-auto max-w-2xl pt-12">
       <div class="text-center">
         <img
           alt=""
-          class="object-cover w-10 h-10 mx-auto mt-6 rounded-full lg:h-20 lg:w-20"
+          class="mx-auto mt-6 h-10 lg:h-20 lg:w-20 object-cover rounded-full w-10 border-2 border-accent-400"
           src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
-        />
-
-        <div class="justify-center mt-4 space-y-4">
-          <p class="text-sm font-medium text-neutral-500">
-            Sam Samuel, Lead marketing specialist -
-            <span class="font-medium text-accent-500">Company</span>
+        /><div class="mt-4 justify-center space-y-4">
+          <p class="text-gray-500 text-sm font-medium">
+            Sam Samuel, Lead marketing specialist - <span
+              class="font-medium text-accent-500">Company</span
+            >
           </p>
         </div>
       </div>
