--- a/src/components/infopages/Faq.astro
+++ b/src/components/infopages/Faq.astro
@@ -1,78 +1,87 @@
 <section aria-labelledby="faq-title" id="faq">
   <div
-    class="items-center w-full px-8 py-12 lg:py-24 mx-auto md:px-12 lg:px-16 max-w-7xl">
+    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24">
     <div class="max-w-2xl">
-      <p class="text-5xl font-extrabold text-black">
+      <p class="font-extrabold text-5xl text-black font-display">
         Frequently asked questions
-      </p><p class="max-w-xl mt-4 text-lg tracking-tight text-neutral-500">
+      </p><p class="mt-4 text-gray-500 max-w-xl text-lg tracking-tight">
         Let's find your answers.
       </p>
     </div><ul
-      class="mx-auto gap-8 grid grid-cols-1 lg:grid-cols-3 lg:max-w-none max-w-2xl mt-16"
+      class="mx-auto max-w-2xl gap-8 grid grid-cols-1 lg:grid-cols-3 lg:max-w-none mt-16"
       role="list">
       <li>
-        <h3 class="text-lg font-medium leading-6 text-neutral-900">
+        <h3
+          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
           Why wouldn't I just hire a full-time designer?
-        </h3><p class="text-base text-neutral-500 mt-4">
+        </h3><p class="mt-4 text-gray-500 text-sm">
           Sure, you could do that! Just consider this - the current salary of a
           Senior Designer &amp; Developer is between 68k - 130k in the US.
         </p>
       </li><li>
-        <h3 class="text-lg font-medium leading-6 text-neutral-900">
+        <h3
+          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
           When can we start?
-        </h3><p class="text-base text-neutral-500 mt-4">
+        </h3><p class="mt-4 text-gray-500 text-sm">
           Within 24 hours. If we are a good fit and a spot is available, we can
           immediately get started and you'll receive a solution for your first
           request within 48 hours!
         </p>
       </li><li>
-        <h3 class="text-lg font-medium leading-6 text-neutral-900">
+        <h3
+          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
           How fast will I receive my deliveries?
-        </h3><p class="text-base text-neutral-500 mt-4">
+        </h3><p class="mt-4 text-gray-500 text-sm">
           On average, most requests are completed in just two days or less.
           However, more complex requests can take longer.
         </p>
       </li><li>
-        <h3 class="text-lg font-medium leading-6 text-neutral-900">
+        <h3
+          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
           Is Jamstacker an agency?
-        </h3><p class="text-base text-neutral-500 mt-4">
+        </h3><p class="mt-4 text-gray-500 text-sm">
           Jamstacker is a One man Company. This means that you will work
           directly with me, Michael Andreuzza.
         </p>
       </li><li>
-        <h3 class="text-lg font-medium leading-6 text-neutral-900">
+        <h3
+          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
           What if I need a task to be revised?
-        </h3><p class="text-base text-neutral-500 mt-4">
+        </h3><p class="mt-4 text-gray-500 text-sm">
           No worries - you can ask for unlimited revisions. Since they are
           usually "quick stuff" - expect them to be done in 24 hours!
         </p>
       </li><li>
-        <h3 class="text-lg font-medium leading-6 text-neutral-900">
+        <h3
+          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
           How can we communicate?
-        </h3><p class="text-base text-neutral-500 mt-4">
+        </h3><p class="mt-4 text-gray-500 text-sm">
           We will communicate directly through Slack Channel. I typically
           respond within a few hours, but at the latest within 24 hours during
           Business days.
         </p>
       </li><li>
-        <h3 class="text-lg font-medium leading-6 text-neutral-900">
+        <h3
+          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
           Are requests really unlimited?
-        </h3><p class="text-base text-neutral-500 mt-4">
+        </h3><p class="mt-4 text-gray-500 text-sm">
           Yes! Submit as many requests as you want.
         </p>
       </li><li>
-        <h3 class="text-lg font-medium leading-6 text-neutral-900">
+        <h3
+          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
           What if I don't like the deliveries?
-        </h3><p class="text-base text-neutral-500 mt-4">
+        </h3><p class="mt-4 text-gray-500 text-sm">
           I offer a 7-day 100% Money-back-guarantee. This means you have enough
           time to test out the service and see if we could be a good fit. You
           can cancel your plan at any time, with the click of a button - no
           contracts, no surprises.
         </p>
       </li><li>
-        <h3 class="text-lg font-medium leading-6 text-neutral-900">
+        <h3
+          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
           How do you guarantee full availability?
-        </h3><p class="text-base text-neutral-500 mt-4">
+        </h3><p class="mt-4 text-gray-500 text-sm">
           I'm only taking up 3 clients at a time so I can deliver superb
           quality. &zwj;
         </p>
