--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,47 +1,42 @@
 <section class="bg-white">
   <div
-    class="items-center w-full px-8 pt-36 mx-auto md:px-12 lg:px-16 max-w-7xl">
-    <div class="max-w-4xl p-10 mx-auto text-center">
+    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 pt-36">
+    <div class="mx-auto text-center max-w-4xl p-10">
       <div>
-        <p class="text-5xl font-extrabold text-black">
+        <p class="font-extrabold text-5xl text-black font-display">
           An Astro and Tailwind CSS starter template for your newest SaaS
-        </p>
-        <p
-          class="max-w-xl mx-auto mt-4 text-lg tracking-tight text-neutral-500">
+        </p><p
+          class="mx-auto max-w-xl mt-4 text-lg text-gray-500 tracking-tight">
           If you could kick the person in the pants responsible for most of your
           trouble, you wouldn't sit for a month
         </p>
-      </div>
-      <div class="flex flex-col justify-center gap-3 mt-10 sm:flex-row">
+      </div><div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
         <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 text-center text-white duration-200 bg-black border-2 border-black hover:bg-transparent hover:border-black rounded-xl hover:text-black focus:outline-none lg:w-auto focus-visible:outline-black focus-visible:ring-black"
-          href="#">Learn more</a
+          class="items-center justify-center rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
+          href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
         >
       </div>
     </div>
   </div>
   <div
-    class="items-center w-full px-8 pt-24 mx-auto md:px-12 lg:px-16 max-w-7xl">
-    <img class="w-full rounded-3xl" src="/dashboard.png" alt="" />
-    <div class="pt-12 mx-auto lg:py-16">
-      <div class="mt-6 grid grid-cols-2 gap-0.5 md:grid-cols-6 lg:mt-8">
+    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 pt-24">
+    <div>
+      <img alt="dashboard" class="w-full" src="/dashboard.png" />
+    </div>
+    <div class="mx-auto pt-12 lg:py-16">
+      <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
         <div class="flex justify-center col-span-1 px-8">
-          <img class="max-h-12" src="/Figma.svg" alt=" logo" />
-        </div>
-        <div class="flex justify-center col-span-1 px-8">
-          <img class="max-h-12" src="/Canva.svg" alt="logo" />
-        </div>
-        <div class="flex justify-center col-span-1 px-8">
-          <img class="max-h-12" src="/Stripe.svg" alt="logo" />
-        </div>
-        <div class="flex justify-center col-span-1 px-8">
-          <img class="max-h-12" src="/Gitlab.svg" alt="logo" />
-        </div>
-        <div class="flex justify-center col-span-1 px-8">
-          <img class="max-h-12" src="/Linear.svg" alt="logo" />
-        </div>
-        <div class="flex justify-center col-span-1 px-8">
-          <img class="max-h-12" src="/Gumroad.svg" alt="logo" />
+          <img alt="logo" class="max-h-12" src="/Figma.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Canva.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Stripe.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Gitlab.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Linear.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Gumroad.svg" />
         </div>
       </div>
     </div>
