--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -1,32 +1,36 @@
-<section aria-labelledby="pricing-two" id="pricing-two">
-  <div
-    class="items-center w-full px-8 pt-36 mx-auto md:px-12 lg:px-16 max-w-7xl">
+<section aria-labelledby="pricing" id="pricing">
+  <div class="lg:px-16 max-w-7xl md:px-12 mx-auto px-8 py-24 scroll-mt-12">
     <div class="sm:text-center">
-      <p class="text-4xl font-extrabold text-neutral-900 font-display"></p>
+      <span class="inline-flex items-center text-accent-500">
+        <span class="font-mono text-sm" aria-hidden="true">2</span><span
+          class="ml-3 h-3.5 w-px bg-accent-500"></span><span
+          class="ml-3 text-base font-medium tracking-tight">Pricing</span
+        >
+      </span>
+      <p class="font-extrabold text-5xl text-black font-display mt-8"></p>
       <h2
-        class="mt-6 text-4xl font-extrabold text-neutral-900 font-display lg:mx-auto">
+        class="mt-6 text-4xl font-extrabold text-black font-display lg:mx-auto">
         Always know what you’ll pay,
 
         <span class="lg:block"> transparent pricing for everyone.</span>
       </h2>
     </div>
   </div>
-  <div
-    class="items-center w-full px-8 py-24 mx-auto md:px-12 lg:px-16 max-w-7xl">
+  <div class="items-center px-8 pt-12 pb-24 mx-auto max-w-7xl">
     <div
-      class="grid max-w-2xl grid-cols-1 py-4 mt-16 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-neutral-100 lg:rounded-3xl">
+      class="grid max-w-2xl grid-cols-1 py-4 mt-16 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-gray-100 lg:rounded-3xl">
       <section class="flex flex-col px-6 rounded-3xl sm:px-8 lg:py-8">
-        <h3 class="mt-5 text-lg text-neutral-900 font-display">Greedy</h3>
-        <p class="mt-2 text-sm text-neutral-500">
+        <h3 class="mt-5 text-lg text-black font-display">Greedy</h3>
+        <p class="mt-2 text-sm text-gray-500">
           Amazing for those attached to money with glue
         </p>
         <p
-          class="order-first text-5xl font-light tracking-tight text-neutral-900 font-display">
+          class="order-first text-5xl font-light tracking-tight text-black font-display">
           $0
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-neutral-500 gap-y-3">
+          class="flex flex-col order-last mt-10 text-sm text-gray-500 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -67,17 +71,17 @@
         >
       </section>
       <section class="flex flex-col px-6 rounded-3xl sm:px-8 lg:py-8">
-        <h3 class="mt-5 text-lg text-neutral-900 font-display">Wannabe</h3>
-        <p class="mt-2 text-sm text-neutral-500">
+        <h3 class="mt-5 text-lg text-black font-display">Wannabe</h3>
+        <p class="mt-2 text-sm text-gray-500">
           Good for those trying to get there, but are too far from it.
         </p>
         <p
-          class="order-first text-5xl font-light tracking-tight text-neutral-900 font-display">
+          class="order-first text-5xl font-light tracking-tight text-black font-display">
           $2
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-neutral-500 gap-y-3">
+          class="flex flex-col order-last mt-10 text-sm text-gray-500 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -128,7 +132,7 @@
       <section
         class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black lg:-mt-24 lg:order-none">
         <h3 class="mt-5 text-lg text-white font-display">Indie Hacker</h3>
-        <p class="mt-2 text-sm text-accent-100">
+        <p class="mt-2 text-sm text-accent-200">
           Perfect for those leaving 9-5 and working 24/7.
         </p>
         <p
@@ -202,17 +206,17 @@
         >
       </section>
       <section class="flex flex-col px-6 rounded-3xl sm:px-8 lg:py-8">
-        <h3 class="mt-5 text-lg text-neutral-900 font-display">Big fish</h3>
-        <p class="mt-2 text-sm text-neutral-500">
+        <h3 class="mt-5 text-lg text-black font-display">Big fish</h3>
+        <p class="mt-2 text-sm text-gray-500">
           For even the biggest enterprise companies.
         </p>
         <p
-          class="order-first text-5xl font-light tracking-tight text-neutral-900 font-display">
+          class="order-first text-5xl font-light tracking-tight text-black font-display">
           $99
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-neutral-500 gap-y-3">
+          class="flex flex-col order-last mt-10 text-sm text-gray-500 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -261,28 +265,20 @@
         >
       </section>
     </div>
-    <div
-      class="items-center w-full px-8 pt-12 mx-auto md:px-12 lg:px-16 max-w-7xl">
-      <div class="mx-auto">
-        <div class="mt-6 grid grid-cols-2 gap-0.5 md:grid-cols-6 lg:mt-8">
-          <div class="flex justify-center col-span-1 px-8">
-            <img class="max-h-12" src="/Figma.svg" alt=" logo" />
-          </div>
-          <div class="flex justify-center col-span-1 px-8">
-            <img class="max-h-12" src="/Canva.svg" alt="logo" />
-          </div>
-          <div class="flex justify-center col-span-1 px-8">
-            <img class="max-h-12" src="/Stripe.svg" alt="logo" />
-          </div>
-          <div class="flex justify-center col-span-1 px-8">
-            <img class="max-h-12" src="/Gitlab.svg" alt="logo" />
-          </div>
-          <div class="flex justify-center col-span-1 px-8">
-            <img class="max-h-12" src="/Linear.svg" alt="logo" />
-          </div>
-          <div class="flex justify-center col-span-1 px-8">
-            <img class="max-h-12" src="/Gumroad.svg" alt="logo" />
-          </div>
+    <div class="mx-auto pt-12 lg:py-16">
+      <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
+        <div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Figma.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Canva.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Stripe.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Gitlab.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Linear.svg" />
+        </div><div class="flex justify-center col-span-1 px-8">
+          <img alt="logo" class="max-h-12" src="/Gumroad.svg" />
         </div>
       </div>
     </div>
