--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -1,18 +1,16 @@
-<section class="bg-white">
+<section id="features">
   <div
-    class="items-center w-full px-8 py-24 mx-auto md:px-12 lg:px-16 max-w-7xl">
-    <div class="max-w-2xl mx-auto lg:p-10 lg:text-center">
+    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
+    <div class="mx-auto max-w-2xl lg:p-10 lg:text-center">
       <div>
-        <span class="inline-flex items-center text-neutral-900">
-          <span class="font-mono text-sm" aria-hidden="true">01</span><span
-            class="ml-3 h-3.5 w-px bg-neutral-900"></span><span
-            class="ml-3 text-base font-medium tracking-tight">Features</span
+        <span class="items-center inline-flex text-accent-500"
+          ><span class="text-sm font-mono" aria-hidden="true">01</span><span
+            class="ml-3 bg-accent-500 h-3.5 w-px"></span><span
+            class="font-medium text-base ml-3 tracking-tight">Features</span
           >
-        </span>
-        <p class="mt-8 text-5xl font-extrabold tracking-tight text-neutral-900">
+        </span><p class="font-extrabold text-5xl text-black font-display mt-8">
           I am a slightly longer heading than the others
-        </p>
-        <p class="max-w-xl mt-4 text-lg tracking-tight text-neutral-600">
+        </p><p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500">
           If you could kick the person in the pants responsible for most of your
           trouble, you wouldn't sit for a month
         </p>
@@ -20,130 +18,118 @@
     </div>
     <div>
       <div class="mx-auto max-w-7xl pt-12">
-        <h2 class="sr-only">Features.</h2>
-        <div>
+        <h2 class="sr-only">Features.</h2><div>
           <div
-            class="grid grid-cols-2 gap-12 md:grid-cols-3 lg:space-y-0 lg:text-center">
+            class="grid gap-12 grid-cols-2 lg:space-y-0 lg:text-center md:grid-cols-3">
             <div>
               <div>
                 <div
-                  class="flex items-center justify-center w-12 h-12 text-black rounded-xl bg-neutral-100 lg:mx-auto">
+                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
-                    class="w-5 h-5 md hydrated"
+                    aria-label="scan outline"
+                    class="hydrated md h-5 w-5"
                     name="scan-outline"
                     role="img"
-                    aria-label="scan outline"
                   />
-                </div>
-                <p class="mt-4 text-lg font-medium leading-6 text-neutral-900">
+                </div><p
+                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Built with Astro.js.
                 </p>
-              </div>
-              <div class="mt-4 text-base text-neutral-500">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 Astro is an all-in-one web framework for building fast,
                 content-focused websites.
               </div>
-            </div>
-            <div>
+            </div><div>
               <div>
                 <div
-                  class="flex items-center justify-center w-12 h-12 text-black rounded-xl bg-neutral-100 lg:mx-auto">
+                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
-                    class="w-5 h-5 md hydrated"
+                    aria-label="scan outline"
+                    class="hydrated md h-5 w-5"
                     name="scan-outline"
                     role="img"
-                    aria-label="scan outline"
                   />
-                </div>
-                <p class="mt-4 text-lg font-medium leading-6 text-neutral-900">
+                </div><p
+                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Styled with Tailwind CSS.
                 </p>
-              </div>
-              <div class="mt-4 text-base text-neutral-500">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 Tailwind CSS works by scanning all of your HTML files,
                 JavaScript components, and any other templates for class names,
                 generating the corresponding styles and then writing them to a
                 static CSS file.
               </div>
-            </div>
-            <div>
+            </div><div>
               <div>
                 <div
-                  class="flex items-center justify-center w-12 h-12 text-black rounded-xl bg-neutral-100 lg:mx-auto">
+                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
-                    class="w-5 h-5 md hydrated"
+                    aria-label="scan outline"
+                    class="hydrated md h-5 w-5"
                     name="scan-outline"
                     role="img"
-                    aria-label="scan outline"
                   />
-                </div>
-                <p class="mt-4 text-lg font-medium leading-6 text-neutral-900">
+                </div><p
+                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Relived with Alpine.js
                 </p>
-              </div>
-              <div class="mt-4 text-base text-neutral-500">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 Alpine is a rugged, minimal tool for composing behavior directly
                 in your markup. Think of it like jQuery for the modern web. Plop
                 in a script tag and get going.
               </div>
-            </div>
-            <div>
+            </div><div>
               <div>
                 <div
-                  class="flex items-center justify-center w-12 h-12 text-black rounded-xl bg-neutral-100 lg:mx-auto">
+                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
-                    class="w-5 h-5 md hydrated"
+                    aria-label="scan outline"
+                    class="hydrated md h-5 w-5"
                     name="scan-outline"
                     role="img"
-                    aria-label="scan outline"
                   />
-                </div>
-                <p class="mt-4 text-lg font-medium leading-6 text-neutral-900">
+                </div><p
+                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Keyboard accessible.
                 </p>
-              </div>
-              <div class="mt-4 text-base text-neutral-500">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 Everything I build is keyboard accessible, and I meticulously
                 write the markup to deliver the best screenreader experience I
                 can provide.
               </div>
-            </div>
-            <div>
+            </div><div>
               <div>
                 <div
-                  class="flex items-center justify-center w-12 h-12 text-black rounded-xl bg-neutral-100 lg:mx-auto">
+                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
-                    class="w-5 h-5 md hydrated"
+                    aria-label="scan outline"
+                    class="hydrated md h-5 w-5"
                     name="scan-outline"
                     role="img"
-                    aria-label="scan outline"
                   />
-                </div>
-                <p class="mt-4 text-lg font-medium leading-6 text-neutral-900">
+                </div><p
+                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Production-ready
                 </p>
-              </div>
-              <div class="mt-4 text-base text-neutral-500">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 I tested the template in the latest versions of all browsers to
                 handle lots of edge-cases you might encounter.
               </div>
-            </div>
-            <div>
+            </div><div>
               <div>
                 <div
-                  class="flex items-center justify-center w-12 h-12 text-black rounded-xl bg-neutral-100 lg:mx-auto">
+                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
-                    class="w-5 h-5 md hydrated"
+                    aria-label="scan outline"
+                    class="hydrated md h-5 w-5"
                     name="scan-outline"
                     role="img"
-                    aria-label="scan outline"
                   />
-                </div>
-                <p class="mt-4 text-lg font-medium leading-6 text-neutral-900">
+                </div><p
+                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Simple deploys
                 </p>
-              </div>
-              <div class="mt-4 text-base text-neutral-500">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 The template is production-ready and easily deployed anywhere
                 that you can deploy a static wbsites, like Vercel, Netlify,
                 GitHub pages, a bounch of options..
