--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,13 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Navigation from "../components/global/Navigation.astro";
-import Hero from "../components/landing/Hero.astro";
-import SectionOne from "../components/landing/SectionOne.astro";
-import SectionTwo from "../components/landing/SectionTwo.astro";
-import Testimonial from "../components/global/Testimonial.astro";
-import Pricing from "../components/landing/Pricing.astro";
-import Cta from "../components/global/Cta.astro";
-import Footer from "../components/global/Footer.astro";
+import Login from "../components/Forms/Login.astro";
 import { AstroSeo } from "@astrolib/seo";
 ---
 
@@ -15,7 +8,7 @@ import { AstroSeo } from "@astrolib/seo";
 Use AstroSeo in all the pages you want different Seo than the index page
 -->
 <AstroSeo
-  title="Home"
+  title="Log in"
   description="Your site description goes here"
   canonical="https://www.michaelandreuzza.com"
   openGraph={{
@@ -49,13 +42,5 @@ Use AstroSeo in all the pages you want different Seo than the index page
   }}
 />
 <BaseLayout>
-  <Navigation />
-  <Hero />
-
-  <SectionOne />
-  <SectionTwo />
-  <Testimonial />
-  <Pricing />
-  <Cta />
-  <Footer />
+  <Login />
 </BaseLayout>
