--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -1,25 +1,23 @@
-<section class="bg-neutral-50">
-  <div
-    class="relative items-center w-full px-5 py-12 lg:py-24 mx-auto md:px-12 lg:px-16 max-w-7xl">
-    <div class="flex w-full mx-auto text-left">
-      <div class="relative inline-flex items-center m-auto align-middle">
-        <div class="relative overflow-hidden text-left">
-          <div class="relative max-w-lg text-center">
-            <div>
-              <p class="text-5xl font-extrabold text-black">
-                Start your free trial
-              </p>
-              <p class="max-w-xl mt-4 text-lg tracking-tight text-neutral-500">
-                Join over 4,000+ startups already growing with Untitled.
-              </p>
-            </div>
-            <div class="flex gap-3 mt-10 justify-center mx-auto">
-              <a
-                class="inline-flex items-center justify-center w-full px-6 py-3 text-center text-white duration-200 bg-black border-2 border-black hover:bg-transparent hover:border-black rounded-xl hover:text-black focus:outline-none lg:w-auto focus-visible:outline-black focus-visible:ring-black"
-                href="#">Learn more</a
-              >
-            </div>
-          </div>
+<section>
+  <div class="lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24 mx-auto">
+    <div
+      class="border p-10 bg-black rounded-3xl mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-12">
+      <div
+        class="grid grid-cols-1 lg:grid-cols-3 justify-between w-full items-center">
+        <div class="lg:col-span-2">
+          <p
+            class="font-extrabold text-5xl lg:text-7xl text-white font-display">
+            Start your free trial
+          </p>
+          <p class="mt-4 text-white text-lg tracking-tight">
+            Join over 4,000+ startups already growing with Untitled.
+          </p>
+        </div>
+        <div class="lg:ml-auto">
+          <a
+            class="items-center justify-center rounded-xl focus-visible:outline-white focus:outline-none inline-flex bg-white border-2 border-white duration-200 focus-visible:ring-white hover:bg-transparent hover:border-white hover:text-white lg:w-auto px-6 py-3 text-center text-black font-medium w-full"
+            href="#">Learn more</a
+          >
         </div>
       </div>
     </div>
