--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -1,53 +1,143 @@
-<footer aria-labelledby="footer-heading" class="mx-auto">
-  <div class="mx-auto max-w-7xl relative items-center lg:px-36 md:px-12 py-12">
-    <div
-      class="mx-auto flex flex-col gap-y-12 items-start justify-between l lg:flex-row lg:items-center pb-6">
-      <div class="mx-auto flex text-center items-center">
-        <div>
-          <p
-            class="text-black font-bold hover:text-moonlightStone italic lg: lg:text-4xl text-2xl">
-            astrosaas.
-          </p><p class="text-black mx-auto text-sm mt-1 max-w-xs">
-            Designed and built in the Åland Islands by Michael Andreuzza.
-          </p>
+<footer aria-labelledby="footer-heading" class="bg-black">
+  <h2 id="footer-heading " class="sr-only">Footer</h2>
+  <div
+    class="items-center px-8 mx-auto py-12 gh:py-24 md:px-12 lg:px-16 xl:px-36 2xl:max-w-7xl">
+    <div class="xl:grid xl:grid-cols-3 xl:gap-8">
+      <div class="text-white xl:col-span-3">
+        <span class="text-lg font-semibold lg:text-2xl italic">Astro SaaS</span>
+        <p class="lg:w-1/4 mt-2 text-sm text-gray-400">
+          <span class="mt-6 font-normal">
+            Digital resources for digital designers and web developers by
+            Michael Andreuzza
+          </span>
+        </p>
+      </div>
+      <div class="grid grid-cols-2 gap-8 mt-12 lg:mt-24 xl:col-span-3">
+        <div class="md:grid md:grid-cols-2 md:gap-8">
+          <div>
+            <h3 class="text-xl text-white">Navigation</h3>
+            <ul role="list" class="mt-4 space-y-2">
+              <li>
+                <a href="/h" class="text-sm text-gray-400 hover:text-white">
+                  Home
+                </a>
+              </li>
+
+              <li>
+                <a href="/faq" class="text-sm text-gray-400 hover:text-white">
+                  FAQ
+                </a>
+              </li>
+              <li>
+                <a href="/terms" class="text-sm text-gray-400 hover:text-white">
+                  Terms
+                </a>
+              </li>
+              <li>
+                <a
+                  href="/privacy"
+                  class="text-sm text-gray-400 hover:text-white">
+                  Privacy
+                </a>
+              </li>
+              <li>
+                <a
+                  href="/signup"
+                  class="text-sm text-gray-400 hover:text-white">
+                  Sign up
+                </a>
+              </li>
+              <li>
+                <a
+                  href="/signup"
+                  class="text-sm text-gray-400 hover:text-white">
+                  Sign In
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="mt-12 md:mt-0">
+            <h3 class="text-xl text-white">Resources</h3>
+            <ul role="list" class="mt-4 space-y-2">
+              <li>
+                <a
+                  href="https://www.unwrapped.design"
+                  class="text-sm text-gray-400 hover:text-white">
+                  Unwrapped
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://github.com/michael-andreuzza/astrosaas"
+                  class="text-sm text-gray-400 hover:text-white">
+                  GitHub repo
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="md:grid md:grid-cols-2 md:gap-8">
+          <div>
+            <h3 class="text-xl text-white">Stay updated</h3>
+            <ul role="list" class="mt-4 space-y-2">
+              <li>
+                <a
+                  href="https://astro.build/"
+                  class="text-sm text-gray-400 hover:text-white">
+                  Astro
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="mt-12 md:mt-0">
+            <h3 class="text-xl text-white">Socials</h3>
+            <ul role="list" class="mt-4 space-y-2">
+              <li>
+                <a
+                  href="https://twitter.com/unwrappedHQ"
+                  class="text-sm text-gray-400 hover:text-white">
+                  @unwrappedHQ
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://twitter.com/Mike_Andreuzza"
+                  class="text-sm text-gray-400 hover:text-white">
+                  @Mike_Andreuzza
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://dribbble.com/MichaelAndreuzza.html"
+                  class="text-sm text-gray-400 hover:text-white">
+                  Dribbble
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-    <nav class="flex flex-wrap justify-center -mx-5 -my-2" aria-label="Footer">
-      <div class="px-5 py-2">
-        <a href="#" class="text-sm text-neutral-500 hover:text-blue-600">
-          About
+  </div>
+</footer>
+<footer class="border-t border-white/5 bg-black">
+  <div
+    class="items-center px-8 py-6 mx-auto md:px-12 lg:px-16 xl:px-36 2xl:max-w-7xl">
+    <div class="md:flex md:items-center md:justify-between">
+      <div class="flex justify-center space-x-6 md:order-2">
+        <a
+          href="https://twitter.com/mike_andreuzza"
+          class="p-3 text-sm text-gray-400 transition duration-500 ease-in-out transform hover:text-white">
+          <span class=""> @Mike_Andreuzza</span>
         </a>
       </div>
-
-      <div class="px-5 py-2">
-        <a href="#" class="text-sm text-neutral-500 hover:text-blue-600">
-          Contact
-        </a>
+      <div class="mt-8 md:mt-0 md:order-1">
+        <p class="text-center">
+          <span class="mx-auto mt-2 text-sm text-gray-400">
+            By Michael Anddeuzza
+          </span>
+        </p>
       </div>
-
-      <div class="px-5 py-2">
-        <a href="#" class="text-sm text-neutral-500 hover:text-blue-600">
-          Pricing
-        </a>
-      </div>
-
-      <div class="px-5 py-2">
-        <a href="#" class="text-sm text-neutral-500 hover:text-blue-600">
-          Github
-        </a>
-      </div>
-
-      <div class="px-5 py-2">
-        <a href="#" class="text-sm text-neutral-500 hover:text-blue-600">
-          Social
-        </a>
-      </div>
-    </nav><div
-      class="mx-auto flex flex-col border-t border-white/10 md:pt-6 pt-8 text-center">
-      <p class="text-black mt-6 lg:w-1/2 md:mt-0 mx-auto text-sm">
-        © Michael Andreuzza • Copyright 2022 • All rights reserved.
-      </p>
     </div>
   </div>
 </footer>
