--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -1,31 +1,176 @@
-<section class="bg-white border-b">
-  <div class="w-full mx-auto md:px-12 lg:px-16 px-8 max-w-7xl">
+<section class="bg-white border-b border-black/5">
+  <div class="w-full mx-auto md:px-12 px-8 max-w-7xl">
     <div
       x-data="{ open: false }"
       class="relative flex flex-col w-full p-5 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
       <div class="flex flex-row items-center justify-between lg:justify-start">
         <a href="/" class="lg:pr-8 text-black">
           <svg
-            class="w-10 h-10"
-            viewBox="0 0 125 116"
+            width="60"
+            height="59"
+            viewBox="0 0 30 29"
             fill="none"
             xmlns="http://www.w3.org/2000/svg">
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M63.3549 114.536L125 70.7495L101.336 0.857422H23.6642L0 70.7495L0.892857 71.3837V71.603H1.2016L62.5 115.143L63.3398 114.547L63.3502 114.55L63.3549 114.536ZM62.0875 112.723L75.8753 71.603H4.19614L62.0875 112.723ZM2.1661 69.8955H46.8502L24.5311 3.84057L2.1661 69.8955ZM25.9767 2.56487H98.3082L39.6379 42.9964L25.9767 2.56487ZM100.288 3.3054L64.0269 28.2939L122.359 68.4922L100.288 3.3054ZM122.288 70.5485L64.291 111.744L86.3975 45.8149L122.288 70.5485ZM40.2148 44.7036L48.7268 69.8955H76.4478L84.8742 44.7651L62.4998 29.3462L40.2148 44.7036Z"
-              fill="currentColor"></path>
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M63.3549 114.536L125 70.7495L101.336 0.857422H23.6642L0 70.7495L0.892857 71.3837V71.603H1.2016L62.5 115.143L63.3398 114.547L63.3502 114.55L63.3549 114.536ZM62.0875 112.723L75.8753 71.603H4.19614L62.0875 112.723ZM2.1661 69.8955H46.8502L24.5311 3.84057L2.1661 69.8955ZM25.9767 2.56487H98.3082L39.6379 42.9964L25.9767 2.56487ZM100.288 3.3054L64.0269 28.2939L122.359 68.4922L100.288 3.3054ZM122.288 70.5485L64.291 111.744L86.3975 45.8149L122.288 70.5485ZM40.2148 44.7036L48.7268 69.8955H76.4478L84.8742 44.7651L62.4998 29.3462L40.2148 44.7036Z"
-              fill="currentColor"
-              fill-opacity="0.2"></path>
+            <g filter="url(#filter0_d_110_851)">
+              <path
+                d="M2 10.66C2 7.24306 2 5.53458 2.67552 4.23415C3.24477 3.13829 4.13829 2.24477 5.23415 1.67552C6.53458 1 8.24306 1 11.66 1H18.34C21.7569 1 23.4654 1 24.7658 1.67552C25.8617 2.24477 26.7552 3.13829 27.3245 4.23415C28 5.53458 28 7.24306 28 10.66V17.34C28 20.7569 28 22.4654 27.3245 23.7658C26.7552 24.8617 25.8617 25.7552 24.7658 26.3245C23.4654 27 21.7569 27 18.34 27H11.66C8.24306 27 6.53458 27 5.23415 26.3245C4.13829 25.7552 3.24477 24.8617 2.67552 23.7658C2 22.4654 2 20.7569 2 17.34V10.66Z"
+                fill="white"></path>
+            </g>
+            <mask
+              id="mask0_110_851"
+              style="mask-type:alpha"
+              maskUnits="userSpaceOnUse"
+              x="2"
+              y="1"
+              width="26"
+              height="26">
+              <rect x="2" y="1" width="26" height="26" rx="6" fill="white"
+              ></rect>
+            </mask>
+            <g mask="url(#mask0_110_851)">
+              <rect
+                width="32"
+                height="32"
+                transform="translate(-1 -2)"
+                fill="white"></rect>
+              <g filter="url(#filter1_ddddd_110_851)">
+                <path
+                  d="M6.90966 21L12.8723 4.85121H17.683L23.6683 21H18.6542L17.8637 18.6285H12.398L11.6075 21H6.90966ZM14.521 12.2142L13.4595 15.3762H16.8022L15.7858 12.2142L15.176 10.1363H15.1309C14.905 10.9945 14.7017 11.6872 14.521 12.2142Z"
+                  fill="#141521"></path>
+                <path
+                  d="M6.90966 21L6.48964 20.8449L6.26706 21.4477H6.90966V21ZM12.8723 4.85121V4.40348H12.5603L12.4523 4.69613L12.8723 4.85121ZM17.683 4.85121L18.1029 4.69561L17.9946 4.40348H17.683V4.85121ZM23.6683 21V21.4477H24.3117L24.0881 20.8444L23.6683 21ZM18.6542 21L18.2295 21.1416L18.3315 21.4477H18.6542V21ZM17.8637 18.6285L18.2885 18.4869L18.1864 18.1808H17.8637V18.6285ZM12.398 18.6285V18.1808H12.0753L11.9732 18.4869L12.398 18.6285ZM11.6075 21V21.4477H11.9302L12.0322 21.1416L11.6075 21ZM14.521 12.2142L14.0975 12.0689L14.0966 12.0717L14.521 12.2142ZM13.4595 15.3762L13.0351 15.2337L12.8369 15.8239H13.4595V15.3762ZM16.8022 15.3762V15.8239H17.4164L17.2285 15.2391L16.8022 15.3762ZM15.7858 12.2142L15.3561 12.3403L15.3596 12.3512L15.7858 12.2142ZM15.176 10.1363L15.6056 10.0102L15.5112 9.68853H15.176V10.1363ZM15.1309 10.1363V9.68853H14.7857L14.6979 10.0223L15.1309 10.1363ZM7.32968 21.1551L13.2923 5.0063L12.4523 4.69613L6.48964 20.8449L7.32968 21.1551ZM12.8723 5.29895H17.683V4.40348H12.8723V5.29895ZM17.2632 5.00681L23.2484 21.1556L24.0881 20.8444L18.1029 4.69561L17.2632 5.00681ZM23.6683 20.5523H18.6542V21.4477H23.6683V20.5523ZM19.079 20.8584L18.2885 18.4869L17.439 18.7701L18.2295 21.1416L19.079 20.8584ZM17.8637 18.1808H12.398V19.0762H17.8637V18.1808ZM11.9732 18.4869L11.1827 20.8584L12.0322 21.1416L12.8227 18.7701L11.9732 18.4869ZM11.6075 20.5523H6.90966V21.4477H11.6075V20.5523ZM14.0966 12.0717L13.0351 15.2337L13.884 15.5187L14.9455 12.3567L14.0966 12.0717ZM13.4595 15.8239H16.8022V14.9284H13.4595V15.8239ZM17.2285 15.2391L16.2121 12.0771L15.3596 12.3512L16.3759 15.5132L17.2285 15.2391ZM16.2155 12.0881L15.6056 10.0102L14.7464 10.2624L15.3562 12.3402L16.2155 12.0881ZM15.176 9.68853H15.1309V10.584H15.176V9.68853ZM14.6979 10.0223C14.4734 10.8754 14.2732 11.5564 14.0975 12.0689L14.9446 12.3594C15.1302 11.8179 15.3366 11.1136 15.5639 10.2502L14.6979 10.0223Z"
+                  fill="#141521"></path>
+              </g>
+            </g>
+            <defs>
+              <filter
+                id="filter0_d_110_851"
+                x="0.75"
+                y="0.25"
+                width="28.5"
+                height="28.5"
+                filterUnits="userSpaceOnUse"
+                color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"
+                ></feFlood>
+                <feColorMatrix
+                  in="SourceAlpha"
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                  result="hardAlpha"></feColorMatrix>
+                <feOffset dy="0.5"></feOffset>
+                <feGaussianBlur stdDeviation="0.625"></feGaussianBlur>
+                <feColorMatrix
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
+                ></feColorMatrix>
+                <feBlend
+                  mode="normal"
+                  in2="BackgroundImageFix"
+                  result="effect1_dropShadow_110_851"></feBlend>
+                <feBlend
+                  mode="normal"
+                  in="SourceGraphic"
+                  in2="effect1_dropShadow_110_851"
+                  result="shape"></feBlend>
+              </filter>
+              <filter
+                id="filter1_ddddd_110_851"
+                x="0.882976"
+                y="4.85121"
+                width="28.812"
+                height="28.2021"
+                filterUnits="userSpaceOnUse"
+                color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"
+                ></feFlood>
+                <feColorMatrix
+                  in="SourceAlpha"
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                  result="hardAlpha"></feColorMatrix>
+                <feOffset dy="0.376667"></feOffset>
+                <feGaussianBlur stdDeviation="0.188334"></feGaussianBlur>
+                <feColorMatrix
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+                ></feColorMatrix>
+                <feBlend
+                  mode="normal"
+                  in2="BackgroundImageFix"
+                  result="effect1_dropShadow_110_851"></feBlend>
+                <feColorMatrix
+                  in="SourceAlpha"
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                  result="hardAlpha"></feColorMatrix>
+                <feOffset dy="0.753335"></feOffset>
+                <feGaussianBlur stdDeviation="0.376667"></feGaussianBlur>
+                <feColorMatrix
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+                ></feColorMatrix>
+                <feBlend
+                  mode="normal"
+                  in2="effect1_dropShadow_110_851"
+                  result="effect2_dropShadow_110_851"></feBlend>
+                <feColorMatrix
+                  in="SourceAlpha"
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                  result="hardAlpha"></feColorMatrix>
+                <feOffset dy="1.50667"></feOffset>
+                <feGaussianBlur stdDeviation="0.753335"></feGaussianBlur>
+                <feColorMatrix
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+                ></feColorMatrix>
+                <feBlend
+                  mode="normal"
+                  in2="effect2_dropShadow_110_851"
+                  result="effect3_dropShadow_110_851"></feBlend>
+                <feColorMatrix
+                  in="SourceAlpha"
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                  result="hardAlpha"></feColorMatrix>
+                <feOffset dy="3.01334"></feOffset>
+                <feGaussianBlur stdDeviation="1.50667"></feGaussianBlur>
+                <feColorMatrix
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+                ></feColorMatrix>
+                <feBlend
+                  mode="normal"
+                  in2="effect3_dropShadow_110_851"
+                  result="effect4_dropShadow_110_851"></feBlend>
+                <feColorMatrix
+                  in="SourceAlpha"
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                  result="hardAlpha"></feColorMatrix>
+                <feOffset dy="6.02668"></feOffset>
+                <feGaussianBlur stdDeviation="3.01334"></feGaussianBlur>
+                <feColorMatrix
+                  type="matrix"
+                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+                ></feColorMatrix>
+                <feBlend
+                  mode="normal"
+                  in2="effect4_dropShadow_110_851"
+                  result="effect5_dropShadow_110_851"></feBlend>
+                <feBlend
+                  mode="normal"
+                  in="SourceGraphic"
+                  in2="effect5_dropShadow_110_851"
+                  result="shape"></feBlend>
+              </filter>
+            </defs>
           </svg>
         </a>
         <button
           @click="open = !open"
-          class="inline-flex items-center justify-center p-2 text-neutral-400 hover:text-neutral-900 focus:outline-none focus:text-neutral-900 lg:hidden">
+          class="inline-flex items-center justify-center p-2 text-gray-400 hover:text-black focus:outline-none focus:text-black lg:hidden">
           <svg
             class="w-6 h-6"
             stroke="currentColor"
@@ -51,11 +196,31 @@
       <nav
         :class="{'flex': open, 'hidden': !open}"
         class="flex-col items-center flex-grow hidden md:pb-0 md:flex md:justify-end md:flex-row">
+        <a
+          class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400 lg:ml-auto"
+          href="#features">Features</a
+        >
+        <a
+          class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
+          href="#pricing">Pricing</a
+        >
+
+        <a
+          class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
+          href="/faq">
+          Faq</a
+        >
+
         <div class="inline-flex items-center gap-2 list-none lg:ml-auto">
           <a
-            href="/pricing"
-            class="inline-flex items-center justify-center px-4 py-2 text-base font-medium text-black bg-neutral-100 rounded-xl group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-neutral-50 active:bg-neutral-200 active:text-accent-400 focus-visible:outline-black">
-            Pricing
+            href="/signup"
+            class="block px-4 py-2 mt-2 text-sm font-medium text-black md:mt-0 hover:text-accent-400 focus:outline-none focus:shadow-outline">
+            Sign up
+          </a>
+          <a
+            href="/login"
+            class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-xl group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-gray-50 active:bg-gray-200 active:text-accent-400 focus-visible:outline-black">
+            Log in
           </a>
         </div>
       </nav>
