--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -1,132 +1,80 @@
 <section class="bg-white">
   <div
-    class="items-center w-full px-8 py-24 mx-auto md:px-12 lg:px-16 max-w-7xl">
-    <div class="max-w-2xl mx-auto lg:p-10 lg:text-center">
+    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24">
+    <div class="mx-auto max-w-2xl lg:p-10 lg:text-center">
       <div>
-        <span class="inline-flex items-center text-neutral-900">
-          <span class="font-mono text-sm" aria-hidden="true">01</span><span
-            class="ml-3 h-3.5 w-px bg-neutral-900"></span><span
-            class="ml-3 text-base font-medium tracking-tight"
+        <span class="items-center inline-flex text-accent-500"
+          ><span class="text-sm font-mono" aria-hidden="true">02</span><span
+            class="ml-3 bg-accent-500 h-3.5 w-px"></span><span
+            class="font-medium text-base ml-3 tracking-tight"
             >More features</span
           >
-        </span>
-        <p class="mt-8 text-5xl font-extrabold tracking-tight text-neutral-900">
+        </span><p class="font-extrabold text-5xl text-black font-display mt-8">
           I am a slightly longer heading than the others
-        </p>
-        <p class="max-w-xl mt-4 text-lg tracking-tight text-neutral-600">
+        </p><p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500">
           If you could kick the person in the pants responsible for most of your
           trouble, you wouldn't sit for a month
         </p>
       </div>
-    </div>
-    <div class="items-center w-full">
-      <img class="w-full rounded-3xl" src="/dashboard2.png" alt="" />
-    </div>
-
-    <div class="mx-auto pt-12">
+    </div><div class="items-center w-full">
+      <img alt="" class="rounded-3xl w-full" src="/dashboard2.png" />
+    </div><div class="mx-auto pt-12">
       <div
-        class="grid w-full grid-cols-1 mx-auto lg:grid-cols-3 gap-12 lg:gap-24">
-        <div class="mx-auto">
+        class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
+        <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="flex items-center justify-center w-12 h-12 text-black rounded-xl bg-neutral-100">
+              class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12">
               <ion-icon
-                class="w-5 h-5 md hydrated"
+                aria-label="scan outline"
+                class="hydrated md h-5 w-5"
                 name="scan-outline"
                 role="img"
-                aria-label="scan outline"
               />
-            </div>
-            <p
-              class="mt-4 text-lg font-medium leading-6 text-neutral-900 lg:mt-0">
+            </div><p
+              class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl lg:mt-0">
               Developer experience
             </p>
-          </div>
-          <p class="mt-3 text-base text-neutral-500">
+          </div><p class="text-gray-500 text-sm mt-4">
             I am so happy, my dear friend, so absorbed in the exquisite sense of
             mere tranquil existence, that I neglect my talents.
           </p>
-          <div class="flex gap-3 mt-10 justify-left">
-            <a
-              class="inline-flex items-center justify-center text-sm font-semibold text-black duration-200 hover:text-accent-500 focus:outline-none focus-visible:outline-gray-600"
-              href="#">
-              <span> Read more</span>
-              <ion-icon
-                class="flex-none w-3 h-3 ml-3 fill-accent-600 group-active:fill-current md hydrated"
-                name="arrow-forward-outline"
-                role="img"
-                aria-label="arrow forward outline"
-              />
-            </a>
-          </div>
-        </div>
-        <div class="mx-auto">
+        </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="flex items-center justify-center w-12 h-12 text-black rounded-xl bg-neutral-100">
+              class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12">
               <ion-icon
-                class="w-5 h-5 md hydrated"
+                aria-label="scan outline"
+                class="hydrated md h-5 w-5"
                 name="scan-outline"
                 role="img"
-                aria-label="scan outline"
               />
-            </div>
-            <p
-              class="mt-4 text-lg font-medium leading-6 text-neutral-900 lg:mt-0">
+            </div><p
+              class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl lg:mt-0">
               Designers go-to app
             </p>
-          </div>
-          <p class="mt-3 text-base text-neutral-500">
+          </div><p class="text-gray-500 text-sm mt-4">
             I am so happy, my dear friend, so absorbed in the exquisite sense of
             mere tranquil existence, that I neglect my talents.
           </p>
-          <div class="flex gap-3 mt-10 justify-left">
-            <a
-              class="inline-flex items-center justify-center text-sm font-semibold text-black duration-200 hover:text-accent-500 focus:outline-none focus-visible:outline-gray-600"
-              href="#">
-              <span> Read more</span>
-              <ion-icon
-                class="flex-none w-3 h-3 ml-3 fill-accent-600 group-active:fill-current md hydrated"
-                name="arrow-forward-outline"
-                role="img"
-                aria-label="arrow forward outline"
-              />
-            </a>
-          </div>
-        </div>
-        <div class="mx-auto">
+        </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="flex items-center justify-center w-12 h-12 text-black rounded-xl bg-neutral-100">
+              class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12">
               <ion-icon
-                class="w-5 h-5 md hydrated"
+                aria-label="scan outline"
+                class="hydrated md h-5 w-5"
                 name="scan-outline"
                 role="img"
-                aria-label="scan outline"
               />
-            </div>
-            <p
-              class="mt-4 text-lg font-medium leading-6 text-neutral-900 lg:mt-0">
+            </div><p
+              class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl lg:mt-0">
               Easy onboarding
             </p>
-          </div>
-          <p class="mt-3 text-base text-neutral-500">
+          </div><p class="text-gray-500 text-sm mt-4">
             I am so happy, my dear friend, so absorbed in the exquisite sense of
             mere tranquil existence, that I neglect my talents.
           </p>
-          <div class="flex gap-3 mt-10 justify-left">
-            <a
-              class="inline-flex items-center justify-center text-sm font-semibold text-black duration-200 hover:text-accent-500 focus:outline-none focus-visible:outline-gray-600"
-              href="#">
-              <span> Read more</span>
-              <ion-icon
-                class="flex-none w-3 h-3 ml-3 fill-accent-600 group-active:fill-current md hydrated"
-                name="arrow-forward-outline"
-                role="img"
-                aria-label="arrow forward outline"
-              />
-            </a>
-          </div>
         </div>
       </div>
     </div>
