--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,15 +1,15 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
-import Footer from "../components/global/Footer.astro";
 ---
 
-<html lang="en">
+<html
+  lang="en"
+  class="scroll-smooth selection:bg-accent-500 selection:text-white no-touchevents hydrated">
   <head>
     <BaseHead />
   </head>
 
   <body class="bg-white">
     <slot />
-    <Footer />
   </body>
 </html>
