--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -1,10 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Navigation from "../components/global/Navigation.astro";
-import Pricing from "../components/global/Pricing.astro";
-import Testimonial from "../components/global/Testimonial.astro";
-import Faq from "../components/global/Faq.astro";
-import Cta from "../components/global/Cta.astro";
+import Faq from "../components/infopages/Faq.astro";
+import Footer from "../components/global/Footer.astro";
 import { AstroSeo } from "@astrolib/seo";
 ---
 
@@ -14,41 +12,39 @@ Use AstroSeo in all the pages you want different Seo than the index page
 <AstroSeo
   title="Home"
   description="Your site description goes here"
-  canonical="https://www.unwraped.design"
+  canonical="https://www.michaelandreuzza.com"
   openGraph={{
-    url: "https://www.unwraped.design",
+    url: "https://www.michaelandreuzza.com",
     title: "Open Graph Title",
     description: "Open Graph Description",
     images: [
       {
-        url: "https://www.unwraped.design/opengraph/social-og.jpg",
+        url: "https://www.michaelandreuzza.com/opengraph/social-og.jpg",
         width: 1200,
         height: 630,
         alt: "Social open graph",
         type: "image/jpeg",
       },
       {
-        url: "https://www.unwraped.design/opengraph/twitter-og.jpg",
+        url: "https://www.michaelandreuzza.com/opengraph/twitter-og.jpg",
         width: 4096,
         height: 4096,
         alt: "Twitter open graph",
         type: "image/jpeg",
       },
-      { url: "https://www.unwraped.design/opengraph/social-og.jpg" },
-      { url: "https://www.unwraped.design/opengraph/twitter-og.jpg" },
+      { url: "https://www.michaelandreuzza.com/opengraph/social-og.jpg" },
+      { url: "https://www.michaelandreuzza.com/opengraph/twitter-og.jpg" },
     ],
     site_name: "YourSitesName",
   }}
   twitter={{
-    handle: "@TwitterHandle",
+    handle: "@Mike_Andreuzza",
     site: "@site",
     cardType: "summary_large_image",
   }}
 />
 <BaseLayout>
   <Navigation />
-  <Pricing />
-  <Testimonial />
   <Faq />
-  <Cta />
+  <Footer/>
 </BaseLayout>
